# mity-rs

./: Cargo.toml  README.md
assets/annot_chrm/: chrm_gtf_annotations.bed.gz.tbi  chrm_mito_dna_func_loc.bed.gz.tbi  chrm_mitomap_panel_annotations.vcf.gz.tbi
assets/config/: vcfanno-config-chrm.toml
mity-rs/: Cargo.toml
mity-rs/assets/annot_chrm/: chrm_mgrb_variants.vcf.gz.tbi  chrm_mitotip_score_fixed_del.vcf.gz.tbi
mity-rs/assets/annot_mt/: mito_dna_func_loc.bed.gz.tbi  mitotip_score_fixed_del.vcf.gz.tbi
mity-rs/assets/config/: report-config.yaml
mity-rs/src/: call.rs  check.rs  main.rs  mity_util.rs
mity-rs/src/annot_chrm/: chrm_anticodon_positions.bed.gz.tbi  chrm_haplotype_data.vcf.gz.tbi
mity-rs/src/annot_mt/: anticodon_positions.bed.gz.tbi  gtf_annotations.bed.gz.tbi  haplotype_data.vcf.gz.tbi  mgrb_variants.vcf.gz.tbi  mitomap_panel_annotations.vcf.gz.tbi
mity-rs/src/config/: vcfanno-config-mt.toml
src/: call.rs  main.rs  normalise.rs
