[package]
name = "mity-rs"
version = "0.1.0"
edition = "2021"
include = ["assets/**/*", "src/*"]

[dependencies]
anyhow = "1.0.93"
bio = "1"
clap = { version = "4.5.21", features = ["derive"] }
glob = "0.3.1"
log = "0.4.22"
noodles = { version = "0.85.0", features = ["bam", "vcf"] }
reqwest = "0.12.9"
simple_logger = "5.0.0"
